# haskell-through-diagrams-book

./: .gitignore  .gitmodules  01-getting-started.html  02-ghci.html  03-basic-diagrams.html  04-01-in-ghci.html  04-02-with-diagrams.html  04-lists.html  05-monoids-and-maybe.html  05-monoids.html  06-functors-and-folds.html  06-maybe.html  07-functors.html  07-trees-and-traversals.html  07-trees.html  08-stepping-outside-of-the-repl.html  LICENSE  README.md  book.toml  chapter-index  index.html  introduction.html  print.html  publish.sh  tools.cabal
.stack-work/install/x86_64-osx/lts-9.0/8.0.2/flag-cache/: tools-0.1.0.0-4th7KFyejsXK7JRSl7I3dZ
.stack-work/install/x86_64-osx/lts-9.0/8.0.2/pkgdb/: package.cache  tools-0.1.0.0-4th7KFyejsXK7JRSl7I3dZ.conf
assets/: custom.css
src/: 01-getting-started.md  02-ghci.md  03-basic-diagrams.md  04-01-in-ghci.md  04-02-with-diagrams.md  04-lists.md  04-xx-list-extra.md  05-functors.md  05-monoids-and-maybe.md  05-monoids.md  06-functors-and-folds.md  06-maybe.md  07-functors.md  07-trees-and-traversals.md  08-stepping-outside-of-the-repl.md  SUMMARY.md  introduction.md
tools/: README.md
